Fixes #1, Implements Find & Replace with RegExp, Ignore Case, Wrap, Total number of matches, Backwards Search. Disabling Highlight All for now and moving that to a separate bug

--- a/content/editor.css
+++ b/content/editor.css
@@ -30,7 +30,7 @@
 #se-search-index {color: rgb(50,50,50);}
 #se-search-options-panel checkbox  { margin: 2px; padding: 2px;}
 #se-replace-container {
-  margin: -70px 0px 40px 0px;
+  margin: -70px 0px 44px 0px;
   max-height: 0px;
   overflow-y: hidden;
   opacity: 0;
